--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ description: "A Portfolio Site" # This will show up in places like twitter, link
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
+email: "dustinsmith514@gmail.com"
 #twitter_username: "twitteruser"
 github_username: "NarrowCoconut"
-linkedin_username: "Dustin Smith"
+linkedin_username: "dustin-smith-student"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
