--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ linkedin_username: "dustin-smith-student"
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
-theme: "midnight"
+theme: "minima"
 
 rss: rss
 
